--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,154 @@
 ---
+import "../styles/global.css";
+import PortfolioSection from '../components/portfolio-section.astro';
+import { Image } from 'astro:assets';
+import Link from '../components/link.astro'
+
+const projects = [
+  {
+    year: '2025',
+    title: 'Nutshell',
+    subtitle: 'Component-centric React Playground',
+		media: '/nutshell.webp',
+	  description: [
+			"I wanted a faster way to prototype React components without project setup overhead, and I wanted developers to easily share and import each other's work.",
+			"<br/>",
+			"The dependency resolver was the most interesting part - using Babel to parse imports, recursively fetching components, detecting circular dependencies, and creating a virtual file system for esbuild-wasm to bundle everything in the browser.",
+			"<br/>",
+			"Built with <strong>Next.js</strong>, <strong>Supabase</strong>, and <strong>esbuild-wasm</strong>.",
+		],
+		links: [
+			{
+				text: 'nutshell.kyleaquino.dev',
+				url: 'https://nutshell.kyleaquino.dev'
+			},
+			{
+				text: 'GitHub Link',
+				url: 'https://github.com/kpaquino2/react-playground'
+			}
+		]
+	},
+	{
+    year: '2024',
+    title: 'UPLB Degree Planner',
+    subtitle: 'Interactive degree planner helping students customize their academic schedule',
+		media: '/degree.webp',
+	  description: [
+			"Students struggle to follow prescribed curricula due to failed courses, slot limits, and scheduling conflicts. There's no easy way to visualize their entire college plan or handle the paperwork for curriculum changes.",
+			"<br/>",
+			"The visual grid with arrows connecting prerequisites to dependent courses makes degree requirements instantly clear at a glance. I scraped UPLB's curriculum database so users start with their prescribed plan, then drag courses between semesters with real-time validation. The PDF generator automatically populates elective forms, turning bureaucratic paperwork into a single click.",
+			"<br/>",
+			"Built with <strong>React</strong>, <strong>Firebase</strong>, and <strong>react-grid-layout</strong>.",
+		],
+		links: [
+			{
+				text: 'uplb-degree-planner.kyleaquino.dev',
+				url: 'https://uplb-degree-planner.kyleaquino.dev'
+			},
+		]
+	},
+];
+
+const experience = [
+  {
+    year: '2022 - Present',
+    title: 'Freelance Full-Stack Developer',
+    subtitle: 'Self-employed',
+    description: [],
+  },
+	{
+    year: 'June 2025 - October 2025',
+    title: 'Frontend Developer (Project-based)',
+    subtitle: 'VTIMETECH Consulting Inc.',
+    description: [],
+  },
+];
+
+const education = [
+  {
+    year: '2018 - 2024',
+    title: 'Bachelor of Science in Computer Science',
+    subtitle: 'University of the Philippines Los Baños',
+    description: [],
+  },
+];
+
+const contacts = [
+	{
+		label: 'Email',
+		text: 'kpaquino@proton.me',
+		url: 'mailto:kpaquino@proton.me'
+	},
+	{
+		label: 'GitHub',
+		text: '@kpaquino2',
+		url: 'https://github.com/kpaquino2'
+	},
+	{
+		label: 'LinkedIn',
+		text: 'Kyle Edward Aquino',
+		url: 'https://www.linkedin.com/in/kyle-edward-aquino-417ba2208/'
+	},
+]
 
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/ico" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Kyle Aquino</title>
 	</head>
-	<body>
-		<h1>Astro</h1>
+	<body class="bg-black text-white">
+		<header class="px-6 md:px-10 pt-6 pb-0 md:py-6">
+			<div class="flex justify-end">
+				<a target="_blank" rel="noopener noreferrer" href="/Aquino_Resume.pdf" class="flex gap-1.5 items-center bg-teal-400 px-3 py-1.5 rounded-full text-black hover:bg-teal-300 cursor-pointer transition">
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-download-icon lucide-download"><path d="M12 15V3"/><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><path d="m7 10 5 5 5-5"/></svg>
+					<p class="font-semibold text-xs lg:text-base">Resume</p>
+				</a>
+			</div>
+		</header>
+		<main class="flex flex-col gap-8">
+			<section>
+				<div class="md:w-180 lg:w-240 mx-auto px-4">
+					<div class="flex justify-between flex-col md:flex-row gap-3 md:gap-15 lg:gap-20 pb-10 border-b border-white/20">
+						<div class="border rounded-full p-1 border-teal-400 size-24 md:size-36 lg:size-48">
+							<Image class="rounded-full size-full" width="192" height="192" src="/pic_sablay.jpg" alt="Kyle Aquino" />
+						</div>
+						<div class="flex-1 flex flex-col gap-1 md:gap-2 lg:gap-4">
+							<h1 class="text-3xl md:text-4xl font-semibold">Kyle Aquino</h1>
+							<p class="text-white/40 lg:text-lg">Full Stack Developer</p>
+							<p class="text-white/70 lg:text-base text-sm leading-relaxed">Full-stack developer with an unending curiosity for how things work. I love the challenge of taking complex problems and finding the simplest path forward. Competitive by nature, collaborative by choice.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<PortfolioSection title="Projects" items={projects} />
+			<PortfolioSection title="Experience" items={experience} />
+			<PortfolioSection title="Education" items={education} />
+			<section>
+				<div class="md:w-180 lg:w-240 mx-auto px-4">
+					<h2 class="text-2xl font-semibold mb-3 md:mb-6">
+						Contacts
+					</h2>
+					<div class="flex flex-col md:flex-row md:justify-between gap-2 lg:text-base text-sm">
+						{contacts.map((contact) => (
+							<div class="flex gap-2">
+								<p class="w-20 md:w-auto">{contact.label}:</p>
+								<Link url={contact.url}>{contact.text}</Link>
+							</div>
+						))}
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer class="px-10 py-6">
+			<div class="md:w-180 lg:w-240 mx-auto px-4 flex flex-col items-center text-center text-sm text-white/50">
+				<p>© {new Date().getFullYear()} Kyle Aquino. All rights reserved.</p>
+  			<p>Built with Astro and Tailwind CSS</p>
+			</div>
+		</footer>
 	</body>
 </html>
