--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,7 +115,7 @@ const contacts = [
 				<div class="md:w-180 lg:w-240 mx-auto px-4">
 					<div class="flex justify-between flex-col md:flex-row gap-3 md:gap-15 lg:gap-20 pb-10 border-b border-white/20">
 						<div class="border rounded-full p-1 border-teal-400 size-24 md:size-36 lg:size-48">
-							<Image class="rounded-full size-full" width="192" height="192" src="/pic_sablay.jpg" alt="Kyle Aquino" />
+							<Image loading="eager" class="rounded-full size-full" width="192" height="192" src="/pic_sablay.jpg" alt="Kyle Aquino" />
 						</div>
 						<div class="flex-1 flex flex-col gap-1 md:gap-2 lg:gap-4">
 							<h1 class="text-3xl md:text-4xl font-semibold">Kyle Aquino</h1>
